fix centerize on mobiles

--- a/frontend/public/css/new/my.css
+++ b/frontend/public/css/new/my.css
@@ -579,6 +579,19 @@ button{
   left: 20px;
   z-index: 100;
 }
+
+.tournament-centerize {
+  /*margin: auto;*/
+  left: 0;
+  right: 0;
+  /*bottom: 0;*/
+  /*top: 0;*/
+  position: absolute;
+  top: 50%;  /* position the top  edge of the element at the middle of the parent */
+
+  transform: translate(0, -50%);
+}
+
 .tournament-difficulty {
   position: absolute;
   top: 20px;
